welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: unclosed comment
/**
^Array2:19: error: unclosed comment
/**
^Array2:19: error: unclosed comment
/**
^Array2:19: error: unclosed comment
/**
^Array2:1: error: Missing closing brace `}' assumed here
override def run() {
^Array2:1: error: expected start of definition
override def run() {
         ^Array2:16: error: Missing closing brace `}' assumed here
}
^Array2:19: error: unclosed comment
/**
^